infrastructure/security_group.tf
resource "aws_security_group" "moh" {
  name        = "moh-security-group"
  description = "Allow traffic for moh"
  vpc_id      = local.vpc_id

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
